--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <h1>
     Welcome World!!! ^_^
-<h1/>
+</h1>h1>
 <h1>
     Welcome World!!! ^_^
-<h1/><h1>
+</h1>h1><h1>
    I'm Andy Coriantumr P. Peduhan
-<h1/>
+</h1>h1>
 <h1>
    BSIT 2C
-<h1/>
+</h1>
+<h1>
+   23 years old
+</h1>
+    
     
